audiolength by health

--- a/Client_side_app/web/Description_Participants.ipynb
+++ b/Client_side_app/web/Description_Participants.ipynb
@@ -2966,6 +2966,111 @@
     "        x = 'test'+str(a)+\" = pd.read_csv(os.path.join(path, file), sep='\\t', header=None, names=['start', 'end', 'rest1', 'rest2'])\"\n",
     "        exec(x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stetho Dataset Audio Length Healthy/Unhealthy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1870.576\n",
+      "3975.5280000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "import librosa \n",
+    "import os\n",
+    "import numpy as np\n",
+    "path = \"../../data/sounds_stetho/\"\n",
+    "\n",
+    "files = os.listdir(path)\n",
+    "files\n",
+    "healthy = []\n",
+    "durations = []\n",
+    "for file in files:\n",
+    "    if \"_N,\" in file:\n",
+    "        healthy.append(1)\n",
+    "    else: healthy.append(0)\n",
+    "\n",
+    "    wav, _= librosa.load(path + file, sr = 4000)\n",
+    "    durations.append(wav.shape[0])\n",
+    "\n",
+    "durations = np.array(durations) / 4000\n",
+    "\n",
+    "total_length = np.sum(durations)\n",
+    "\n",
+    "#print(total_length / 3600)\n",
+    "healthy = np.array(healthy)\n",
+    "healthy_duration = durations * healthy \n",
+    "unhealthy_duration = durations * (1-healthy)\n",
+    "print(healthy_duration.sum())\n",
+    "print(unhealthy_duration.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "699.5400000000001\n",
+      "19073.494\n"
+     ]
+    }
+   ],
+   "source": [
+    "import librosa \n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"../../data/ICBHI_diagnosis.txt\", sep='\\t', header=None, names=['id', 'diagnosis']).set_index(['id'])\n",
+    "\n",
+    "\n",
+    "path = \"../../data/sounds_kaggle/\"\n",
+    "\n",
+    "files = os.listdir(path)\n",
+    "files\n",
+    "healthy = []\n",
+    "durations = []\n",
+    "\n",
+    "\n",
+    "for file in files:\n",
+    "    id = int(file[:3])\n",
+    "    disease = df.loc[id,'diagnosis']\n",
+    "\n",
+    "    if disease == \"Healthy\":\n",
+    "        healthy.append(1)\n",
+    "    else: healthy.append(0)\n",
+    "\n",
+    "    wav, _= librosa.load(path + file, sr = 4000)\n",
+    "    durations.append(wav.shape[0])\n",
+    "\n",
+    "durations = np.array(durations) / 4000\n",
+    "\n",
+    "total_length = np.sum(durations)\n",
+    "\n",
+    "#print(total_length / 3600)\n",
+    "healthy = np.array(healthy)\n",
+    "healthy_duration = durations * healthy \n",
+    "unhealthy_duration = durations * (1-healthy)\n",
+    "print(healthy_duration.sum())\n",
+    "print(unhealthy_duration.sum())"
+   ]
   }
  ],
  "metadata": {
@@ -2989,7 +3094,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "26e49bc044355d0fb742e5df05603d7a6745ee0fd0264a60b64034172fdecd97"
+    "hash": "e2fb97dbb6b58f7381a23ef406090f9625b2c14adc869ae0093bdfdddad894ae"
    }
   }
  },
