--- a/Client_side_app/web/purecode.ipynb
+++ b/Client_side_app/web/purecode.ipynb
@@ -358,7 +358,7 @@
     "\t<option value='1.00'>have sound airways.</option>\n",
     "\t<option>have sick airways.</option>\n",
     "\t</select>\n",
-    "\tThat feedback is optional. You receive the probability of healthy airways right after the 16-second breath test.<br><br>Train, 'start test', and breath forcedly through your mouth.</p>\n",
+    "\tThat feedback is optional. You receive the probability of healthy airways right after the 16-second breath test.<br><br>Train, 'start test', and breath deeply through your mouth.</p>\n",
     "    '''\n",
     "av = 'one'"
    ]
